2007-05-24  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/bsdyengine.*: Refactored to use the
	overloaded render functions. Added features to push the bond type and
	name to enable bond selection. Added selected bond highlighting.

	* libavogadro/src/tools/selectrotatetool.cpp: Added some initial support
	for selecting bonds with clicks and selection boxes.

	* libavogadro/src/tools/manipulatetool.cpp: Added checks for primitive
	type before doing any manipulation - previously assumed all selected 
	items were atoms.

	* libavogadro/src/global.h: Added SEL_BOND_EXTRA_RADIUS for selected
	bond rendering in the engines. 

2007-05-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/application.cpp: Fix bug 1717423 -- Mac interface
	fix for opening files from Finder.

	* avogadro/src/mainwindow.*: Mac interface fixes. Duplicate menu
	and toolbar actions for  new, open, save, close, quit. Remove
	icons from menu items. Fix bug 1720872: don't close the last
	MainWindow, hide it and disable menu items. Restore upon open or
	new.

	* avogadro/src/extensions/smartsextension.*: Remove undo/redo
	support. Selections cannot be preserved against views, so there's
	no good way to undo a selection change.

2007-05-23  Donald E. Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/glwidget.*: Did a bunch of API cleanup.  I know i know.
	How you guys loath my long function names.  Moved from ::selection to
	::selectedPrimitives.  Now have ::setSelected and ::isSelect.  Thanks
	KDevelop for nice refactoring.  This naming method follows more of the Qt
	style "view" naming conventions (ie ::selectedItems).
	* .: Fixed a few compiler warnings.

2007-05-22  Donald E. Curtis <dcurtis3@sourceforge.net>

	* avogadro/src/enginetabwidget.*: Now uses a .ui file to design the
	widget.  this is much easier.
	* avogadro/src/primitivetreeview.*: Added the PrimitiveTreeView class as a
	helper class for displaying PrimitiveItemModels.  Just looks a bit
	prettier.