@@ -1,3 +1,12 @@
+2007-05-25  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* avogadro/src/extension.h, avogadro/src/mainwindow.cpp: 
+	Add Extension::menuPath() which defines menus and submenus for
+	extensions. Default is to use "&Tools" -- existing Tools menu.
+
+	* avogadro/src/extensions/ghemicalextension.h: Use above for a
+	"Molecular Mechanics" submenu for all actions.
+
 2007-05-24  Marcus D. Hanwell <marcus@cryos.org>
 	* libavogadro/src/engines/bsdyengine.*: Refactored to use the
 	overloaded render functions. Added features to push the bond type and
